# phi_p3dx_localization

./: CMakeLists.txt  README.md  TESTING.md  package.xml
config/: localization.rviz
include/phi_p3dx_localization/: localization_node.hpp
launch/: bringup_gazebo.launch.py  bringup_mobilesim.launch.py  bringup_robot.launch.py  localization.launch.py
launch/includes/: bringup_env.launch.py  bringup_map_server.launch.py  bringup_rviz.launch.py  bringup_spawn_gz.launch.py  bringup_state_publishers.launch.py
phi_p3dx_localization/: main.py
rviz/: localization.rviz
scripts/: localization_example.py
src/: localization_example.cpp  localization_node.cpp
